# flow_tick2min

./: Dockerfile  deploy.py  flow.py  pyproject.toml  requirements.txt
.github/workflows/: prefect-CICD.yaml  test-prefect-CICD.yaml
flows/: deploy.py  flow.py
src/: logger.py  logic.py
tests/: test_flow.py  test_hun_tick2min.py  test_import.py  test_logic.py
