[tool.poetry]
name = "flow-tick2min"
version = "0.4.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.*"
prefect-docker = "0.4.5"
requests = "2.31.0"
pyspark = "3.4.3"
griffe = "0.48.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
