[tool.poetry]
name = "flow-tick2min"
version = "0.4.6"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.*"
requests = "2.31.0"
pyspark = "3.4.3"
griffe = "==0.*"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
prefect = "2.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
